--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Preact Phiber</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimal-ui">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -54,13 +53,30 @@
 
   <section class="dark">
     <div class="container-pp">
-      <h1>Core Team</h1>
-      <a>
-        Jason Miller
-      </a>
+      <h1 class="team-header">Preact Phiber 🌋 Coming Soon</h1>
+      <h2 class="team-header2">Core Team</h2>
+      <ul class="team">
+        <li>
+          <div class="avatar" style="background-image: url('https://pbs.twimg.com/profile_images/795334749476810753/LljqR8gE.jpg')"></div>
+          <div class="links">
+            <h5>Jason Miller</h5>
+            <a href="https://twitter.com/_developit" target=_blank rel="noopener">@_developit </a>
+          </div>
+        </li>
+        <li>
+          <div class="avatar" style="background-image: url('https://pbs.twimg.com/profile_images/818716361337643008/yFsG_qrW.jpg')"></div>
+          <div class="links">
+            <h5>Zouhir Chahoud</h5>
+            <a href="https://twitter.com/_zouhir" target="_blank" rel="noopener">@_zouhir</a>
+          </div>
+        </li>
+      </ul>
     </div>
   </section>
 
+  <section class="light copyrights">
+    Copyrights 2017 - By <a href="https://twitter.com/_zouhir">Zouhir</a>
+  </section>
   <script src="scripts/index.js"></script>
 </body>
 
