--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
     <div class="container-pp">
       <h1>introducing <span>Preact Phiber</span></h1>
       <h2>The 3kb alternative to React Fiber with the same API</h2>
+      <a class="git" href="https://github.com/zouhir/preact-phiber" target=_blank rel="noopener">Github</a>
     </div>
 
   </section>
